<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="339dp"
        android:layout_marginBottom="319dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/servicios"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="207dp"
        android:layout_height="161dp"
        android:text="@string/servic"
        android:textAlignment="viewStart"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="78dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="153dp"
        android:layout_height="97dp"
        android:src="@drawable/tres"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="78dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/serv" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="379dp"
        android:layout_height="539dp"
        android:layout_marginStart="22dp"
        android:contentDescription="@string/zerv"
        android:src="@drawable/servicios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>