<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-220dp"
        android:layout_marginBottom="308dp"
        android:contentDescription="@string/banner"
        android:src="@drawable/valfr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="188dp"
        android:layout_height="159dp"
        android:layout_marginStart="-400dp"
        android:layout_marginTop="-250dp"
        android:layout_marginEnd="-200dp"
        android:layout_marginBottom="-660dp"
        android:src="@drawable/dos"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="168dp"
        android:layout_height="179dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="-660dp"
        android:text="@string/nuestraEmpresa"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="168dp"
        android:layout_height="179dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="-900dp"
        android:text="@string/NUESTRA"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="-460dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nuestra_empresa"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="-700dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nuestra_historia"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="190dp"
        android:layout_height="140dp"
        android:layout_marginStart="-900dp"
        android:layout_marginEnd="-200dp"
        android:layout_marginBottom="-960dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/uno"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.444" />
</androidx.constraintlayout.widget.ConstraintLayout>